feat: 完成任务11.3 - 添加射击功能说明
- 更新菜单场景游戏说明，包含射击操作指导
- 在HTML游戏信息栏添加射击和连击说明
- 游戏场景中添加实时射击连击显示和操作提示
- 游戏结束场景显示射击统计（命中率、最高连击）
- 添加射击统计跟踪功能
- 创建射击功能说明测试文件
- 完成任务11所有子任务

需求映射: 7.1 - 射击功能说明

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="gameContainer">
         <canvas id="gameCanvas" width="800" height="400"></canvas>
         <div id="gameInfo">
-            <p>按空格键跳跃 | 得分: <span id="score">0</span></p>
+            <p>按空格键跳跃 | X键射击漂浮障碍物 | 射击连击获得额外得分 | 得分: <span id="score">0</span></p>
         </div>
     </div>
 
@@ -48,7 +48,9 @@
     <script src="js/entities/entity.js"></script>
     <script src="js/entities/player.js"></script>
     <script src="js/entities/obstacle.js"></script>
+    <script src="js/entities/bullet.js"></script>
     <script src="js/managers/obstacleManager.js"></script>
+    <script src="js/managers/bulletManager.js"></script>
     <script src="js/managers/sceneManager.js"></script>
     <script src="js/scenes/scene.js"></script>
     <script src="js/scenes/menuScene.js"></script>
@@ -56,6 +58,7 @@
     <script src="js/scenes/gameOverScene.js"></script>
     <script src="js/systems/scoreSystem.js"></script>
     <script src="js/systems/collisionSystem.js"></script>
+    <script src="js/systems/effectSystem.js"></script>
     <script src="js/renderer.js"></script>
     <script src="js/objectPool.js"></script>
     <script src="js/performanceMonitor.js"></script>
