--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     <script src="js/objectPool.js"></script>
     <script src="js/performanceMonitor.js"></script>
     <script src="js/memoryManager.js"></script>
+    <script src="js/performance/optimizedObjectPool.js"></script>
+    <script src="js/performance/shootingPerformanceMonitor.js"></script>
+    <script src="js/performance/performanceOptimizer.js"></script>
     <script src="js/debugConsole.js"></script>
     <script src="js/systemIntegration.js"></script>
     <script src="js/gameEngine.js"></script>
