change shoot key Q

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="gameContainer">
         <canvas id="gameCanvas" width="800" height="400"></canvas>
         <div id="gameInfo">
-            <p>按空格键跳跃 | X键射击漂浮障碍物 | 射击连击获得额外得分 | 得分: <span id="score">0</span></p>
+            <p>按空格键跳跃 | Q键射击漂浮障碍物 | 射击连击获得额外得分 | 得分: <span id="score">0</span></p>
         </div>
     </div>
 
