--- a/test_shooting.html
+++ b/test_shooting.html
@@ -4,7 +4,7 @@
     <title>Shooting Test</title>
 </head>
 <body>
-    <div>Press X or Ctrl to test shooting (check console)</div>
+    <div>Press Q to test shooting (check console)</div>
     <div id="status">Ready to test...</div>
     
     <script src="js/config.js"></script>
@@ -31,7 +31,7 @@
         }
         update();
         
-        console.log('Shooting test ready. Press X or Ctrl to shoot.');
+        console.log('Shooting test ready. Press Q to shoot.');
     </script>
 </body>
 </html>
